# apost

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apost.h  apost_det.h  apost_statical.h  dets.h  gauss.h  interval.h  leqs.h  matrix.h  precision.h  random_matrix.h  value.h
benchmark/: b_det.cpp  b_det_time.cpp  b_leq_time.cpp
examples/: ex_apost_arith.cpp  ex_det.cpp  ex_leq.cpp
